force-app/main/default/objects/mcdm_15__ApprovalsPageSettings__c/mcdm_15__ApprovalsPageSettings__c.object-meta.xml
<CustomObject>
    <description>Contains Approvals Page settings for a user and/or a campaign</description>
    <label>Approvals Page Settings</label>
    <nameField>
        <displayFormat>Settings {0000}</displayFormat>
        <label>Approvals Page Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals Page Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>