force-app/main/default/objects/mcdm_15__ApprovalsPageSettings__c/fields/mcdm_15__Level__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Level__c</fullName>
    <description>The level name for the ApprovalsPageSetting record</description>
    <label>Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>