force-app/main/default/objects/mcdm_15__ApprovalsPageSettings__c/fields/mcdm_15__User__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>